--- a/ELBF20250324.AppWebMVC/appsettings.json
+++ b/ELBF20250324.AppWebMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Conn": "Data Source=EMYLIS\\SQLEXPRESS;Initial Catalog=Test20250324DB;Integrated Security=True;Encrypt=False"
+  }
 }
